# aether

./: .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  README.md  config.2b2t.json  config.2b2t.org  known-issues.md  rust-toolchain
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  pr.yml  release.yml  rust.yml
aether-core/: CHANGELOG.md  Cargo.toml  README.md  config.example.json
aether-core/.cargo/: config.toml
aether-core/src/: afk.rs  chat.rs  client.rs  command.rs  config.rs  config_res.rs  discord.rs  handle_command.rs  main.rs  plugins.rs  state.rs  tick.rs  utils.rs
aether-core/src/commands/: error.rs  help.rs  mod.rs
aether-core/src/commands/pearl/: load.rs  mod.rs  set.rs
examples/: README.md
examples/anti-afk/: Cargo.toml
examples/anti-afk/src/: main.rs
examples/stone-miner/: Cargo.toml  README.md  build.rs  config.json  rust-toolchain
examples/stone-miner/src/: config.rs  login.rs  main.rs  tick.rs  trial.rs  utils.rs
multi-azalea/: Cargo.toml  README.md  build.rs
multi-azalea/src/: azalea.rs  lib.rs
plugins/: README.md
plugins/anti-afk/: Cargo.toml  README.md
plugins/anti-afk/src/: config.rs  lib.rs
plugins/auto-mine/: Cargo.toml  README.md
plugins/auto-mine/src/: lib.rs
plugins/discord/: Cargo.toml  README.md
plugins/discord/src/: chat_bridge.rs  common.rs  lib.rs  log_bridge.rs  runtime.rs
plugins/discord/src/webhook/: mod.rs
plugins/join-coordination/: Cargo.toml
plugins/join-coordination/src/: chat.rs  common.rs  lib.rs  queue.rs  utils.rs
plugins/task-manager/: Cargo.toml  README.md
plugins/task-manager/src/: client.rs  interaction.rs  lib.rs  movement.rs  task_manager_queue.rs  utils.rs
plugins/utility/: CHANGELOG.md  Cargo.toml  README.md
plugins/utility/src/: auto_eat.rs  client.rs  lib.rs
plugins/utility/src/auto_eat/: food.rs  mod.rs
plugins/utility/src/auto_totem/: mod.rs
