[package]
name = "aether-core"
version = "0.3.0-alpha.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
anyhow = "1.0.83"
azalea = { git = "https://github.com/as1100k-forks/azalea.git", branch = "better-1.20.6" }
azalea-task-manager = { path = "../plugins/task-manager", features = ["anti-afk"] }
azalea-anti-afk = { path = "../plugins/anti-afk" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros"] }
parking_lot = "0.12.2"
log = { version = "0.4.21" }
rand = "0.8.5"
regex = "1.10.4"
