[package]
name = "aether-core"
version = "0.3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.83"
azalea = { package = "multi-azalea", path = "../multi-azalea" }
azalea-task-manager = { path = "../plugins/task-manager", features = [
    "anti-afk",
] }
azalea-anti-afk = { path = "../plugins/anti-afk" }
azalea-utility = { path = "../plugins/utility" }
bevy-discord = { git = "https://github.com/as1100k/bevy-discord", rev = "c554e1d", features = [
    "full",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.37.0", features = ["macros"] }
parking_lot = "0.12.2"
tracing = "0.1.40"
rand = "0.8.5"
regex = "1.10.4"
