[package]
name = "anti-afk"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea.git", branch = "main" }
#azalea = { package = "multi-azalea", path = "../../multi-azalea" }
azalea-anti-afk = { path = "../../plugins/anti-afk" }
azalea-utility = { path = "../../plugins/utility" }
parking_lot = "0.12.3"
tokio = "1.38.0"
anyhow = "1.0.86"