[package]
name = "stone-miner"
version = "0.2.0"
edition = "2021"
publish = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = true

[features]
trial = ["dep:chrono"]
login = []
sell = []
auto-reconnect = []

[dependencies]
anyhow = "1.0.83"
azalea = { git = "https://github.com/as1100k-forks/azalea.git", branch = "better-1.20.6" }
azalea-auto-mine = { path = "../../plugins/auto-mine" }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1.0.201", features = ["derive"] }
parking_lot = "0.12.2"
log = { version = "0.4.21" }
rand = "0.8.5"
regex = "1.10.4"
chrono = {version = "0.4.38", optional = true}

[build-dependencies]
serde_json = "1.0.117"