[package]
name = "azalea-anti-afk"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Kumar <117935160+AS1100K@users.noreply.github.com>"]

[dependencies]
azalea = { git = "https://github.com/as1100k-forks/azalea.git", branch = "better-1.20.6" }
tracing = "0.1.40"
rand = "0.8.5"

[dev-dependencies]
tokio = "1.38.0"
anyhow = "1.0.86"
