[package]
name = "azalea-anti-afk"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Kumar <117935160+AS1100K@users.noreply.github.com>"]
publish = false

[features]
git = ["azalea/git"]
git_1_20_6 = ["azalea/git_1_20_6"]

[dependencies]
azalea = { package = "multi-azalea", path = "../../multi-azalea" }
tracing = "0.1.40"
rand = "0.8.5"

[dev-dependencies]
tokio = "1.38.0"
anyhow = "1.0.86"
