[package]
name = "bevy-discord"
version = "0.2.0-alpha.1"
edition = "2021"
authors = ["Aditya Kumar <117935160+AS1100K@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/AS1100K/aether/tree/main/plugins/discord"
publish = true

[dependencies]
bevy_app = "0.13.2"
bevy_ecs = "0.13.2"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"]}
serde = { version = "1.0.203", features = ["derive"] }
tracing = "0.1.40"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt"] }
serde_json = { version = "1.0.117" }

[dev-dependencies]
anyhow = "1.0.86"
azalea = "0.9.1"