[package]
name = "azalea-task-manager"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Kumar <117935160+AS1100K@users.noreply.github.com>"]

[features]
anti-afk = ["dep:azalea-anti-afk"]

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", branch = "1.20.6" }
azalea-anti-afk = { path = "../anti-afk", optional = true }
log = "0.4.21"
