[package]
name = "azalea-task-manager"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Kumar <117935160+AS1100K@users.noreply.github.com>"]

[features]
anti-afk = ["dep:azalea-anti-afk"]

[dependencies]
azalea = { git = "https://github.com/as1100k-forks/azalea.git", branch = "better-1.20.6" }
azalea-anti-afk = { path = "../anti-afk", optional = true }
log = "0.4.21"

[dev-dependencies]
tokio = "1.38.0"
anyhow = "1.0.86"
